2006-09-10  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/28923
	expr.c (find_array_section): Only use the array lower and upper
	bounds for the start and end of the sections, where the expr is
	NULL.

2006-09-10  Paul Thomas  <pault@gcc.gnu.org>

	PR libfortran/28923
	gfortran.dg/array_initializer_2.f90: Fill in missing index start value.
	gfortran.dg/array_initializer_3.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116815 138bc75d-0d04-0410-961f-82ee72b054a4